--- a/style.css
+++ b/style.css
@@ -34,25 +34,32 @@ body {
     align-items: center;
     /*animation*/
     background-color: #333533; 
-    background: linear-gradient(45deg, #333533, #242423, #E8EDDF, #CFDBD5);
+    background: linear-gradient(45deg, #57602d, #895818, #036d9a);
     background-size: 400% 400%; 
     animation: gradientAnimation 10s ease infinite; 
 }
 
 /*navbar*/
+.kukoologo{
+    width: 80px;
+    margin-right: 3%;
+    margin-bottom: 3%;
+}
 header {
     position: absolute;
-    top: 10%; 
-    width: auto; 
-    height: 60px; 
+    top: 10%;
+    width: 90%; 
+    max-width: 600px; 
+    height: 3.75rem; 
     background: #242423;
-    border-radius: 30px; 
+    border-radius: 1.875rem; 
     display: flex;
     justify-content: center;
     align-items: center;
     z-index: 100;
     transition: top 0.3s;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5); 
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    padding: 0 1rem; 
 }
 
 .navbar a {
@@ -68,6 +75,42 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.clock-title {
+    font-size: 15px;
+    margin: 0;
+    position: absolute;
+    top: 18%; 
+    height: 60px; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #CFDBD5;
+}
+
+.kukoo-logo {
+    font-size: 25px;
+    margin: 0;
+    position: absolute;
+    top: 3%; 
+    height: 60px; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #CFDBD5;
+}
+
+.header-elements .kukoo-logo {
+    font-size: 25px;
+    margin: 0;
+    position: absolute;
+    top: 5%; 
+    height: 60px; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #CFDBD5;
 }
 
 .navbar a::before {
@@ -89,6 +132,7 @@ header {
 .container {
     position: relative;
     color: #fff;
+    margin-top: 7%;
 }
 
 .clock {
@@ -170,3 +214,28 @@ header {
     text-align: center; 
     font-family: digital-clock-font; 
 }
+
+
+
+.timezone-container {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+    color: #e0e1dd; 
+    border-radius: 50%;
+}
+
+#timezone-select {
+    margin: 10px;
+    padding: 10px 15px;
+    font-size: 1rem;
+    border-radius: 12px; 
+    border: 1px solid #F5CB5C; 
+    background-color: #242423;
+    color: #CFDBD5; 
+    /*appearance: none;*/
+    cursor: pointer;
+    position: relative; 
+}
+
