--- a/components/clock/clock.html
+++ b/components/clock/clock.html
@@ -3,22 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css"> 
-    <link rel="stylesheet" href="/components/clock/clock-style.css">
-    <link rel="icon" href="/assets/kukoo-logo.svg"> 
+    <link rel="stylesheet" href="../../style.css"> 
+    <link rel="stylesheet" href="clock-style.css">
+    <link rel="icon" href="../../asset/kukoo-logo.svg"> 
     <title>Kukoo</title>
 </head>
 <body>
     <header class="header" id="header">
         <nav class="navbar">
-            <a href="/components/clock/clock.html">CLOCK</a>
-            <a href="/components/timer/timer.html">TIMER</a>
-            <a href="/components/stopwatch/stopwatch.html">STOPWATCH</a>
+            <a href="../clock/clock.html">CLOCK</a>
+            <a href="../timer/timer.html">TIMER</a>
+            <a href="../stopwatch/stopwatch.html">STOPWATCH</a>
         </nav>
     </header>
 
     <div class="kukoo-logo">
-        <img src="/asset/kukoo-logo.svg" alt="logo" class="kukoologo">
+        <img src="../../asset/kukoo-logo.svg" alt="logo" class="kukoologo">
         <h1>Kukoo</h1>
     </div>
 
@@ -29,13 +29,13 @@
     <div class="container">
         <div class="clock">
             <div class="digital-clock" id="digital-clock">12:00:00</div>
-            <div style="--clr: #ff3d58; --h: 120px" id="hour" class="hand"> 
+            <div style="--clr: #ff3d58;" id="hour" class="hand"> 
                 <i></i>
             </div>
-            <div style="--clr: #00a6ff; --h: 160px" id="min" class="hand"> 
+            <div style="--clr: #00a6ff;" id="min" class="hand"> 
                 <i></i>
             </div>
-            <div style="--clr: #ffffff; --h: 200px" id="sec" class="hand"> 
+            <div style="--clr: #ffffff;" id="sec" class="hand"> 
                 <i></i>
             </div>
 
@@ -67,6 +67,6 @@
 
     
     
-    <script src="/components/clock/clock-script.js"></script>
+    <script src="clock-script.js"></script>
 </body>
 </html>
