--- a/components/timer/timer.html
+++ b/components/timer/timer.html
@@ -3,22 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/components/timer/timer-style.css"> 
-    <link rel="stylesheet2" href="/style.css"> 
-    <link rel="icon" href="/assets/kukoo-logo.svg"> 
+    <link rel="stylesheet" href="timer-style.css"> 
+    <link rel="stylesheet2" href="../../style.css"> 
+    <link rel="icon" href="../../asset/kukoo-logo.svg"> 
     <title>Kukoo</title>
 </head>
 <body>
     <header class="header" id="header">
         <nav class="navbar">
-            <a href="/components/clock/clock.html">CLOCK</a>
-            <a href="/components/timer/timer.html">TIMER</a>
-            <a href="/components/stopwatch/stopwatch.html">STOPWATCH</a>
+            <a href="../clock/clock.html">CLOCK</a>
+            <a href="../timer/timer.html">TIMER</a>
+            <a href="../stopwatch/stopwatch.html">STOPWATCH</a>
         </nav>
     </header>
 
     <div class="kukoo-logo">
-        <img src="/asset/kukoo-logo.svg" alt="logo" class="kukoologo">
+        <img src="../../asset/kukoo-logo.svg" alt="logo" class="kukoologo">
         <h1>Kukoo</h1>
     </div>
 
