--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body {
 
 /*navbar*/
 .kukoologo{
-    width: 80px;
+    width: 6rem;
     margin-right: 3%;
     margin-bottom: 3%;
 }
@@ -72,7 +72,7 @@ header {
 
 .navbar a {
     position: relative;
-    font-size: 1.125rem;
+    font-size: 1.4rem;
     color: #CFDBD5;
     font-weight: 500;
     margin: 0 2rem;
@@ -86,7 +86,7 @@ header {
 }
 
 .clock-title {
-    font-size: 15px;
+    font-size: 1.4rem;
     margin: 0;
     position: absolute;
     top: 18%; 
@@ -98,7 +98,7 @@ header {
 }
 
 .kukoo-logo {
-    font-size: 25px;
+    font-size: 2rem;
     margin: 0;
     position: absolute;
     top: 3%; 
@@ -134,6 +134,62 @@ header {
 
 .navbar a:hover::before {
     width: 100%;
+}
+
+@media (max-width: 1538px) {
+header {
+    top: 10%;
+    width: 90%; 
+    max-width: 600px;
+    height: 7.6%;
+}
+
+.navbar a {
+    font-size: 1em;
+    margin: 0 2.4rem;
+}
+
+.kukoologo{
+    width: 3.2rem;
+}
+
+.kukoo-logo {
+    font-size: 1.2rem;
+    height: 5%; 
+}
+
+.clock-title {
+    font-size: 0.8rem;
+    height: 10%;
+}
+}
+
+@media (max-width: 1024px) {
+header {
+    top: 10%;
+    width: 90%; 
+    max-width: 600px;
+    height: 7.6%;
+}
+
+.navbar a {
+    font-size: 1em;
+    margin: 0 2.4rem;
+}
+
+.kukoologo{
+    width: 3rem;
+}
+
+.kukoo-logo {
+    font-size: 1rem;
+    height: 5%; 
+}
+
+.clock-title {
+    font-size: 0.8rem;
+    height: 6%;
+}
 }
 
 @media (max-width: 768px) {
