--- a/components/timer/timer.html
+++ b/components/timer/timer.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="timer-style.css"> 
-    <link rel="stylesheet2" href="../../style.css"> 
+    <link rel="stylesheet" href="../../style.css"> 
     <link rel="icon" href="../../asset/kukoo-logo.svg"> 
     <title>Kukoo</title>
 </head>
@@ -27,18 +27,7 @@
     </div>
 
 
-    <div class="timer-ui center">
-        <div class="button-container center">
-            <button id="start-timer">Start</button>
-            <button id="reset-timer">Reset</button>
-        </div>
     
-        <div class="input-container center">
-            <input type="number" id="hours-input" placeholder="HH" min="0" max="23">
-            <input type="number" id="minutes-input" placeholder="MM" min="0" max="59">
-            <input type="number" id="seconds-input" placeholder="SS" min="0" max="59">
-        </div>
-    </div>
     
 
     <div class="main-container center">
@@ -51,6 +40,21 @@
 
         <div class="timer-container center">
             <div class="timer center"></div>
+        </div>
+    </div>
+
+
+
+    <div class="timer-ui center">
+        <div class="button-container center">
+            <button id="start-timer">Start</button>
+            <button id="reset-timer">Reset</button>
+        </div>
+    
+        <div class="input-container center">
+            <input type="number" id="hours-input" placeholder="HH" min="0" max="23">
+            <input type="number" id="minutes-input" placeholder="MM" min="0" max="59">
+            <input type="number" id="seconds-input" placeholder="SS" min="0" max="59">
         </div>
     </div>
 
