--- a/components/timer/timer-style.css
+++ b/components/timer/timer-style.css
@@ -41,7 +41,7 @@ body {
 
 /*navbar*/
 .kukoologo{
-    width: 80px;
+    width: 6rem;
     margin-right: 3%;
     margin-bottom: 3%;
 }
@@ -78,7 +78,7 @@ header {
 }
 
 .clock-title {
-    font-size: 15px;
+    font-size: 1.5rem;
     margin: 0;
     position: absolute;
     top: 18%; 
@@ -90,7 +90,7 @@ header {
 }
 
 .kukoo-logo {
-    font-size: 25px;
+    font-size: 2rem;
     margin: 0;
     position: absolute;
     top: 3%; 
